kubernetes/talos/deploy/unifi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  annotations: 
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`unifi.vandeneede.org`)
      services:
        - name: unifi-ingress
          port: admin
          scheme: https
